@@ -1,0 +1,7 @@
+<form action="<% gluon :action %>" method="<% gluon :method %>"<% gluon :attrs do %> <% gluon :name %>="<% gluon :value %>"<% end %>><% content %></form>
+<%#
+  Local Variables:
+  mode: HTML
+  indent-tabs-mode: nil
+  End:
+%>
