@@ -1,3 +1,7 @@
+2010-05-17  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/web/form.rb: form add-on.
+
 2010-05-15  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/web/table.rb: self-descriptive method name for table
